Added more explanation to the process

--- a/Task 3.ipynb
+++ b/Task 3.ipynb
@@ -953,10 +953,10 @@
       "source": [
         "# Test 2 \r\n",
         "\r\n",
-        "This test is to demonstrate that the hermitian circuit is being correctly generated. From the unitary matrices above we can clearly see that if we have $|01>$ state initially, then the actual circuit will output (-|10>+|11>)/sqrt(2), whereas the hermitian circuit will output the state (|10>-|11>)/sqrt(2). \r\n",
+        "This test is to demonstrate that the hermitian circuit is being correctly generated. From the unitary matrices above we can clearly see that if we have $\\ket{01}$ state initially, then the actual circuit will output $(-\\ket{10}+\\ket{11})/\\sqrt{2}$, whereas the hermitian circuit will output the state $(\\ket{10}-\\ket{11})/\\sqrt{2}$. \r\n",
         "\r\n",
         "Step 1: Initialise the qubits and the circuit for the new state \\\r\n",
-        "Step 1: State Preparation : Apply the X gate to the q[1], then we now have |01> state \\\r\n",
+        "Step 1: State Preparation : Apply the X gate to the `q[1]`, then we now have $\\ket{01}$ state \\\r\n",
         "Step 3: Apply circuit : I have converted the entire circuit to a gate \\\r\n",
         "Step 4: I apply the newly constructed gate on my qubits \\\r\n",
         "Step 5: Simulate the circuit and get the output statevector  "
